Fix issue where strap line overlaps the navigation

--- a/static/css/critical.css
+++ b/static/css/critical.css
@@ -950,6 +950,7 @@ table {
     display: none;
     position: absolute;
     bottom: 0;
+    height: 50px;
     z-index: 999;
     top: calc(100vh - 150px);
     left: 30px;
